Closed Bug 53224 Opened 25 years ago Closed 24 years ago

Press Enter doesn't close Linux "install complete" dlog

Categories

(SeaMonkey :: Installer, defect, P2)

x86
Linux

Tracking

(Not tracked)

VERIFIED FIXED
Future

People

(Reporter: depman1, Assigned: curt)

Details

(Keywords: platform-parity, polish)

linux only. build 2000-09-19-08-M18 1. Run linux installer. 2. Go through the install wizard and complete the install. 3. When "installation has completed" dialog appear, make sure that it's in focus. 4. Press Enter key. Result: Nothing happens. Expected: It should close the "install complete" and general install dialogs.
changed QA contact to depstein, keyword pp for linux only.
Severity: normal → minor
Keywords: pp
QA Contact: jimmylee → depstein
This is a install wizard bug. Changing Component to Installer. Ccing Grace.
Component: Installer: XPInstall Engine → Installer
Polish; next release.
Status: NEW → ASSIGNED
Target Milestone: --- → Future
Priority: P3 → P2
Below is a small patch that should fix this. Is the code in xpinstall/wizard/unix/src2 used for both the net-installer and the sea-installer? Index: nsInstallDlg.cpp =================================================================== RCS file: /cvsroot/mozilla/xpinstall/wizard/unix/src2/nsInstallDlg.cpp,v retrieving revision 1.19 diff -u -r1.19 nsInstallDlg.cpp --- nsInstallDlg.cpp 2001/08/18 01:15:58 1.19 +++ nsInstallDlg.cpp 2001/09/16 20:17:54 @@ -875,6 +875,8 @@ okButton); gtk_signal_connect(GTK_OBJECT(okButton), "clicked", GTK_SIGNAL_FUNC(CompleteOK), completeDlg); + GTK_WIDGET_SET_FLAGS (okButton, GTK_CAN_DEFAULT); + gtk_widget_grab_default(okButton); gtk_widget_show_all(completeDlg); while (!bComplete) I need someone to review and check this in for me.
Keywords: patch, polish, review
change qa owner to jimmylee.
QA Contact: depstein → jimmylee
Yes, the "network" and "full" (aka "sea") installers use the same binaries (and therefore codebases).
Assignee: sgehani → curt
Status: ASSIGNED → NEW
Could someone review this trivial fix?
CC'ing Syd and Samir to see if we can get a trivial review out of them for this
r=sgehani We may as well go through and fix all our dialogs in the installer, especially the navigation ones (Next button) to make them accessible. Andre, Thanks for the patch. Please attach patches to bugs rather than inlining in the future. Makes it easier for reviewers who want to interlace comments and patch state can be tracked by glancing at the top of bug report.
sr=dveditz (now I can)
Checked patch into Mozilla trunk.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Build: 2001-10-31-11-trunk(LINUX) It works now! Marking verified.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.