Enables Okay button so dialog can be closed. Fixes bug #53224.